# scf-auto-crosswalker

./: .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CASE_STUDY.md  Dockerfile  README.md  app.py  columns.txt  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ai-review.yml  ci.yml  dependency-review.yml
data/: scf_parsed.json
lab_data/: aws_securityhub_finding.json  sample_audit_scope.txt  sample_endpoint_policy.txt  sample_existing_controls.csv
lab_data/sample_outputs/: audit_scope_analysis_result.json  aws_finding_mapping_result.csv  policy_mapping_result.csv
scripts/: generate_mock_output.py
src/: fetch_scf.py  mapper.py
src/swarm/: graph.py  llm_factory.py  session_manager.py
src/swarm/agents/: challenger.py  mapper.py  orchestrator.py  researcher.py  specialist.py
src/swarm/state/: schema.py
src/ui/components/: sidebar.py  styles.py
tests/: test_fetch_scf.py  test_mapper.py  test_validate_mapping.py
